--- a/css/AquaForm.css
+++ b/css/AquaForm.css
@@ -325,6 +325,27 @@
   line-height: 20px; /* 125% */
   opacity: 0.7;
 }
+/* ОШИБКА */
+.aquaForm__input.alert .aquaForm__input-inner {
+  border: 1px solid rgb(238, 0, 90);
+}
+.aquaForm__input .aquaForm__alert {
+  display: none;
+  margin-top: 6px;
+  color: rgb(238, 0, 90);
+  font-family: 'ProximaNova-Regular';
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 10px;
+  letter-spacing: 0px;
+  text-align: left;
+  opacity: 1;
+}
+.aquaForm__input.alert .aquaForm__alert {
+  display: block;
+}
+/* ОШИБКА */
+
 .aquaForm__inputs.margin {
   margin-top: 24px;
 }
@@ -499,9 +520,7 @@
   letter-spacing: 1.35px;
   text-transform: uppercase;
 }
-/* .aquaForm-tab__box .aquaForm-tab__btn.active {
-  color: red;
-} */
+
 .aquaForm-content__box .aquaForm__content {
   max-width: 100%;
   width: 100%;
@@ -795,6 +814,29 @@
   }
   .aquaForm__svg-wrapper:hover .aquaForm__tip::before {
     left: 275px;
+  }
+  .custom-radio__label,
+  .aquaForm__legend,
+  .aquaForm__expense-amount p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0%;
+  }
+  .aquaForm__legend {
+    width: 281px;
+  }
+  .aquaForm__radio-wrapper.result .aquaForm__legend-wrapper {
+    justify-content: space-between;
+  }
+  .aquaForm__crumb {
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 12px;
+    letter-spacing: 1.35px;
+  }
+  .aquaForm__inputs {
+    gap: 22px;
   }
 }
 @media (max-width: 385px) {
