--- a/css/AquaResult.css
+++ b/css/AquaResult.css
@@ -762,6 +762,9 @@
   .popup__details-cross {
     margin-right: 40px;
   }
+  .aquaResult__item {
+    gap: 32px;
+  }
 }
 @media (max-width: 760px) {
   .aquaResult__crumbs-wrapper {
@@ -771,7 +774,6 @@
     padding-right: 20px;
   }
   .aquaResult__crumbs-wrapper {
-    /* max-width: 100%; */
     padding-left: 18px;
     margin-left: 0;
     width: 100%;
@@ -898,6 +900,10 @@
   .popup__detail p {
     font-size: 14px;
     line-height: 18px;
+  }
+  .aquaResult__item {
+    font-size: 24px;
+    line-height: 32px ;
   }
   .popup__detail {
     padding: 12px 0;
